<resources>
    <string name="app_name">CustomDictionary</string>

    <string name="error_category_title_can_not_be_empty">error: Category title can not be empty!.</string>
    <string name="error_duplicate_category_title">error: Duplicate category title!</string>
    <string name="error_unknown">error: unknown error</string>

    <string name="msg_no_category_has_added_yet">No category has added yet.</string>
    <string name="msg_no_word_has_added_to_the_group_yet">No word has added to this group yet.</string>

    <string name="toolbar_title_category_list_fragment">Home</string>
    <string name="toolbar_title_add_word_fragment">Add New Word</string>

    <string name="hint_word_title">Title</string>
    <string name="hint_definition_text">Definition</string>
    <string name="hint_original_example">Example</string>
    <string name="hint_example_translation">Extra Information</string>
    <string name="hint_category_title">Title</string>

    <string name="action_add_definition">Add Definition</string>
    <string name="action_add_example">Add Example</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="dialog_title_add_category_dialog">Create New Category</string>

    <string name="error_word_title_is_empty">Word title is empty!</string>
    <string name="error_there_is_an_empty_definition_with_non_empty_example">There is an empty definition with non-empty examples!</string>
    <string name="error_there_should_be_at_least_one_non_empty_definition_text">There should be at least one non-empty definition text!</string>
</resources>