<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.hadi.android.custom.dictionary.ui.addcategory.AddCategoryViewModel" />

        <variable
            name="fragment"
            type="com.hadi.android.custom.dictionary.ui.addcategory.AddCategoryDialog" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/DialogStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtDialogTitle"
                    style="@style/DialogTitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/dialog_title_add_category_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtCategoryTitleHint"
                    style="@style/HintTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/hint_category_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDialogTitle" />

                <EditText
                    android:id="@+id/edtCategoryTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="343"
                    android:text="@={viewmodel.groupTitle}"
                    app:error="@{viewmodel.groupTitleError}"
                    app:layout_constraintEnd_toEndOf="@+id/txtCategoryTitleHint"
                    app:layout_constraintStart_toStartOf="@+id/txtCategoryTitleHint"
                    app:layout_constraintTop_toBottomOf="@+id/txtCategoryTitleHint"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/SecondaryButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:onClick="@{() -> fragment.onCancelClick()}"
                    android:text="@string/action_cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtCategoryTitle"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btnSave"
                    style="@style/PrimaryButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="@{() -> viewmodel.onBtnAddCategoryClick()}"
                    android:text="@string/action_save"
                    app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toTopOf="@+id/btnCancel"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</layout>
